<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_dashboard_modern"
        android:title="@string/home" />
    
    <item
        android:id="@+id/nav_deepscan"
        android:icon="@drawable/ic_scanner_modern"
        android:title="@string/deepscan" />
    
    <item
        android:id="@+id/nav_deepfake"
        android:icon="@drawable/ic_shield_check"
        android:title="@string/deepfake" />
    
    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/analytics" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>